[tool.poetry]
name = "hangman-be"
version = "0.1.0"
description = "Backend for Hangmanonline.io"
authors = ["Rimaz Khan <rimazk@umich.edu>", "Srihari Srinivasan <ssrihari@umich.edu>", "Vikhram Thirupathi <vikhramt@umich.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
attrs = "20.3.0"
bidict = "0.21.2"
blinker = "1.4"
click = "7.1.2"
dnspython = "2.5.0"
eventlet = "0.35.1"
flask = "1.1.2"
flask-cors = "3.0.10"
flask-mail = "0.9.1"
flask-pymongo = "2.3.0"
flask-socketio = "5.3.6"
greenlet = "3.0.3"
gunicorn = "20.0.4"
iniconfig = "1.1.1"
itsdangerous = "1.1.0"
jinja2 = "2.11.2"
markupsafe = "1.1.1"
packaging = "20.8"
pluggy = "0.13.1"
py = "1.10.0"
pymongo = "3.11.2"
pyparsing = "2.4.7"
pytest = "6.2.1"
python-dotenv = "0.15.0"
python-engineio = "4.0.0"
python-socketio = "5.0.3"
six = "1.15.0"
toml = "0.10.2"
werkzeug = "1.0.1"

[[tool.poetry.packages]]
include = "hangman"
from = "."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "python -m unittest"
